--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "url": "https://github.com/IbnDaanis/todo-list/issues"
   },
   "homepage": "https://github.com/IbnDaanis/todo-list#readme",
-  "dependencies": {},
+  "dependencies": {
+    "tailwindcss": "^2.0.2"
+  },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "sass": "^1.32.4"
