--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "url": "https://github.com/IbnDaanis/todo-list/issues"
   },
   "homepage": "https://github.com/IbnDaanis/todo-list#readme",
-  "dependencies": {},
+  "dependencies": {
+    "uuid": "^8.3.2"
+  },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "parcel-bundler": "^1.12.4",
