--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   },
   "homepage": "https://github.com/IbnDaanis/todo-list#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
     "parcel-bundler": "^1.12.4",
-    "postcss": "^7.0.35",
-    "postcss-modules": "^4.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "sass": "^1.32.4"
   }
 }
